name:                time-extended
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dvekeman/time-extended#readme
license:             BSD3
license-file:        LICENSE
author:              Dieter Vekeman
maintainer:          dieter.vekeman@gmail.com
copyright:           (c) 2016 Dieter Vekeman
category:            CLI Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Time.Extended
                       Data.Time.Clock.System.Extended
  build-depends:       base >= 4.7 && < 5
                     , text
                     , text-extended
                     , time
  default-language:    Haskell2010

test-suite time-extended-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , time-extended
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dvekeman/time-extended
